--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -14,56 +14,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "a = soup.findAll('a')[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bs4.element.Tag"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -178,6 +128,8 @@
     "                #print(link)\n",
     "                if '.mid' in link:\n",
     "                    print(link)\n",
+    "                    if \"format\" in link:\n",
+    "                        continue\n",
     "                    download_url = 'http://www.piano-midi.de'+ '/' + link\n",
     "                    print(download_url)\n",
     "                    \n",
